# munetic_express/src/routes/auth.routes.ts
@@ -2,13 +2,17 @@ import { Router } from 'express';
 import passport from 'passport';
 import LocalStrategy from '../modules/local.strategy';
 import * as Auth from '../controllers/auth.controller';
+import JwtStrategy from '../modules/jwt.strategy';
 
 export const path = '/auth';
 export const router = Router();
 
-passport.use('local', LocalStrategy());
+passport.use(LocalStrategy());
+passport.use('jwt', JwtStrategy());
 
 router.post('/login', Auth.login);
-router.post('/signup', Auth.signup);
-router.get('/signup/user', Auth.isValidInfo);
 router.get('/logout', Auth.logout);
+router.post('/signup', Auth.signup);
+router.get('/access', passport.authenticate('jwt'), Auth.accessCheck);
+router.get('/refresh', Auth.refresh);
+router.get('/signup/user', Auth.isValidInfo);
